--- a/force-app/main/default/classes/SummitEventsDonationController.cls
+++ b/force-app/main/default/classes/SummitEventsDonationController.cls
@@ -194,7 +194,8 @@ public with sharing class SummitEventsDonationController {
         }
 
         public void deleteFee(Summit_Events_Fee__c feeIn) {
-            if (Schema.sObjectType.Summit_Events_Fee__c.isDeletable()) {
+            System.debug('is fee deletable? ' + Summit_Events_Fee__c.sObjectType.getDescribe().isDeletable());
+            if (Summit_Events_Fee__c.sObjectType.getDescribe().isDeletable()) {
                 delete feeIn;
             }
         }
