--- a/force-app/test/default/classes/SummitEventsFeed_TEST.cls
+++ b/force-app/test/default/classes/SummitEventsFeed_TEST.cls
@@ -20,18 +20,23 @@ private class SummitEventsFeed_TEST {
         RestContext.request = req;
         RestContext.response = res;
         SummitEventsFeed.getSummitEventsFeed();
+        System.assert(res.responseBody.toString().contains('General Public'));
 
         //Test sex dd request
         req.params.remove('feedType');
         req.params.put('feedType', 'sexDD');
         RestContext.request = req;
+        RestContext.response = res;
         SummitEventsFeed.getSummitEventsFeed();
+        System.assert(res.responseBody.toString().contains('Male'));
 
         //test filter minus dates
         req.params.remove('feedType');
         req.params.put('feedType', 'eventList');
         RestContext.request = req;
+        RestContext.response = res;
         SummitEventsFeed.getSummitEventsFeed();
+        System.assert(res.responseBody.toString().contains('Test Event - Test Event Session -1'));
 
         //test filter minus dates
         req.params.remove('feedType');
@@ -40,34 +45,46 @@ private class SummitEventsFeed_TEST {
         req.params.put('sponsor', 'Big Business');
         req.params.put('longdesc', 'true');
         RestContext.request = req;
+        RestContext.response = res;
         SummitEventsFeed.getSummitEventsFeed();
+        System.assert(res.responseBody.toString().contains('[]'));
         req.params.put('eventId', 'WRONG!');
         RestContext.request = req;
+        RestContext.response = res;
         SummitEventsFeed.getSummitEventsFeed();
+        System.assert(res.responseBody.toString().contains('[]'));
 
         //test filter with start date
         req.params.put('viewStart', String.valueOf(Datetime.now().addMonths(-1)));
         req.params.put('hideClosed', 'true');
         RestContext.request = req;
+        RestContext.response = res;
         SummitEventsFeed.getSummitEventsFeed();
+        System.assert(res.responseBody.toString().contains('[]'));
 
         //test filter with end date
         req.params.put('viewEnd', String.valueOf(Datetime.now().addMonths(1)));
         req.params.put('audience', 'Alumni');
         req.params.put('hideClosed', 'notRight');
         RestContext.request = req;
+        RestContext.response = res;
         SummitEventsFeed.getSummitEventsFeed();
+        System.assert(res.responseBody.toString().contains('[]'));
 
         //test filter
         req.params.put('filter', 'OCB');
         RestContext.request = req;
+        RestContext.response = res;
         SummitEventsFeed.getSummitEventsFeed();
+        System.assert(res.responseBody.toString().contains('[]'));
 
         //test filter
         req.params.put('rectype', 'UDAR');
         req.params.put('callback', 'UDAR');
         RestContext.request = req;
+        RestContext.response = res;
         SummitEventsFeed.getSummitEventsFeed();
+        System.assert(res.responseBody.toString().contains('UDAR([])'));
         Test.stopTest();
 
     }
